cambios para conectar con base de datos y poder ejecutar proyecto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,15 @@
 ## Application.properties para prod.
 # Datasource properties
-spring.datasource.url=jdbc:mariadb://localhost:3306/vehiculos
-#spring.datasource.url=jdbc:mariadb://db-vehiculos:3306/vehiculos
-spring.datasource.username=u_vehiculos
-spring.datasource.password=pw_vehiculos
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/payandgo
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # JPA properties
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # Logger properties
-logging.level.org.hibernate.type.descriptor.sql=trace
+#logging.level.org.hibernate.type.descriptor.sql=trace
