--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 ## Application.properties para prod.
-# Datasource properties
-spring.datasource.url=jdbc:mysql://localhost:3306/payandgo
+# Datasource properties jdbc:mysql://localhost:3306/payandgo
+spring.datasource.url=jdbc:mysql://localhost/tfg?useSSL=false 
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 server.error.include-message=always
@@ -15,3 +15,9 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Logger properties
 #logging.level.org.hibernate.type.descriptor.sql=trace
+
+#JWT
+security.jwt.secret=asdfg12345
+security.jwt.issuer=Main
+#2 horas de sesion
+security.jwt.ttlMillis= 7200000
